--- a/febbraio.html
+++ b/febbraio.html
@@ -83,7 +83,7 @@ In vita, non solo nel suo paese natale, Roli era apprezzato soprattutto come sol
 
 Il nostro personaggio morì a Vignola il 25 giugno 1959 e fu sepolto nel camposanto cittadino.<br><br>
 
-Nell’immagine qui sotto, prima di copertina di Ugo Roli (Fiordaliso), <i>Faléster dl’Inféren (immagini dantesche nella fantasia popolare). Poesie in dialetto modenese</i>, presentazione di Filippo Fichera, Modena, Dante Cavallotti, 1951; la prima copertina e i disegni sono di Mario Molinari, mentre l'autore delle xilografie è Benito Boccolari. Si tenga presente che «Faléster» in vernacolo sta per l'italiano “faville”, che nell'opera sono contenuti anche versi in italiano e che in questa prima di copertina si usa la forma «d' l'Inféren». Fonte: collezione privata.</big></p><br>
+Nell’immagine qui sotto, prima di copertina di Ugo Roli (Fiordaliso), <i>Faléster dl’Inféren (immagini dantesche nella fantasia popolare). Poesie in dialetto modenese</i>, presentazione di Filippo Fichera, Modena, Dante Cavallotti, 1951; la prima di copertina e i disegni sono di Mario Molinari, mentre l’autore delle xilografie è Benito Boccolari. Si tenga presente che «Faléster» in vernacolo sta per l’italiano “faville”, che nell’opera sono contenuti anche versi in italiano e che in questa prima di copertina si usa la forma «d’ l’Inféren». Fonte: collezione privata.</big></p><br>
 <center><img src="img/celebri vignolesi/Roli Ugo/libro.jpg" width="500" height="700"></center><br><br><br>
 <p><strong><big><big><center>Vuoi saperne di più su Ugo Roli?<br>Allora, visita il suo <a href="Roli.html">profilo personale</a> nella sezione <a href="Celebri Vignolesi.html">Celebri Vignolesi</a>!</big></big></center></strong></p><br><br><br>
 
