--- a/luglio.html
+++ b/luglio.html
@@ -64,9 +64,9 @@ Nell’immagine sottostante, <i>incipit</i> della dedicatoria in versi, dal tito
 <p><strong><big><big><center>Vuoi saperne di più su Giuseppe Antonio Plessi?<br>Allora, visita il suo <a href="Plessi2.html">profilo personale</a> nella sezione <a href="Celebri Vignolesi.html">Celebri Vignolesi</a></big></big></center></strong></p><br><br><br>
 
  <p><big><strong>27 luglio 1712</strong>: morì a Vignola <strong>DOMENICO BELLOI</strong> (o <strong>BELLOJ</strong>), notaio e storico.<br><br>  
-Domenico Belloi, figlio di <strong>Pietro Ercole</strong> (1643-1702), nacque a Vignola il 6 marzo 1660. Laureatosi <i>in utroque iure</i> presso l’Università di Bologna (1681), assunse la carica di protonotario apostolico a Roma (1683-1684), quindi venne nominato podestà di Monfestino e poi podestà di Corniglio (all’epoca, il primo borgo faceva parte del Marchesato di Vignola, mentre il secondo del Ducato di Parma). Tornato stabilmente nel luogo natale, vi intraprese l’attività di notaio e, nel 1689, sposò Anna Maria Vallicelli, avendone molti figli. A Vignola, da allora, la sua esistenza fu più volte tormentata da acuti dissapori e incomprensioni sorti in seno alla comunità cittadina.<br>  
+Domenico Belloi, figlio di <strong>Pietro Ercole</strong> (1643-1702), nacque a Vignola il 6 marzo 1660. Laureatosi <i>in utroque iure</i> presso l’Università di Bologna (1681), assunse la carica di protonotario apostolico a Roma (1683-1684), quindi venne nominato podestà di Monfestino e poi podestà di Corniglio (all’epoca, il primo borgo faceva parte del Marchesato di Vignola, mentre il secondo del Ducato di Parma). Tornato stabilmente nel luogo natale, vi intraprese l’attività di notaio e, nel 1689, sposò Anna Maria Vallicelli, avendone nove figli. A Vignola, da allora, la sua esistenza fu più volte tormentata da acuti dissapori e incomprensioni sorti in seno alla comunità cittadina.<br>  
 
-Godette dell’amicizia di alcuni letterati di primo piano operanti al tempo nel Ducato di Modena, compresi <strong>Giacomo</strong> (detto Jacopo) <strong>Cantelli</strong> (1643-1695) e, negli ultimi anni di vita, <strong>Lodovico Antonio Muratori</strong> (1672-1750).<br> 
+Godette dell’amicizia di alcuni letterati di primo piano operanti al tempo nel Ducato di Modena, compresi <strong>Giacomo</strong> (detto <strong>Jacopo</strong>) <strong>Cantelli</strong> (1643-1695) e, negli ultimi anni di vita, <strong>Lodovico Antonio Muratori</strong> (1672-1750).<br> 
 
 All’inizio del nuovo secolo, Belloi attese alla preparazione del <i>De Vineolae moderniori statu chronica enarratio</i>, del <i>De familiis nobilioribus Vineolae</i> e delle <i>Institutiones rite ac recte vivendi</i>, lasciandoli manoscritti. La più significativa di queste tre opere è la prima, che  costituisce una ricca e interessante esposizione delle vicende storiche di Vignola e del suo territorio; ne curò l’edizione a stampa <strong>Alessandro Plessi</strong> (1824-1907) nell’ambito delle celebrazioni organizzate nel 1872 per festeggiare i duecento anni dalla nascita di Muratori.<br>  
 
@@ -77,7 +77,7 @@ Nell’immagine qui sotto, frontespizio della prima edizione (postuma) dell’op
 <p><strong><big><big><center>Vuoi saperne di più su Domenico Belloi?<br>Allora, visita il suo <a href="Belloi1.html">profilo personale</a> nella sezione <a href="Celebri Vignolesi.html">Celebri Vignolesi</a>!</big></big></center></strong><br><br><br></p>
 <p><big><strong><a href="Anniversari.html">Indice dei mesi</a></big></strong></center></p><br><br>
 </section>
-<footer><i class="far fa-copyright">&nbsp;</i> Copyright 2021, 2022 - CELEBRI VIGNOLESI<br>
+<footer><i class="far fa-copyright">&nbsp;</i> Copyright 2021, 2022, 2023 - CELEBRI VIGNOLESI<br>
 <i class="fab fa-instagram"></i>&nbsp; <a href="https://www.instagram.com/celebri_vignolesi/?hl=it">celebri_vignolesi</a>&nbsp;&nbsp;&nbsp;<i class="fab fa-facebook"></i> &nbsp;<a href="https://www.facebook.com/Celebri-Vignolesi-103269268827528/?ref=page_internal">Celebri Vignolesi</a><br>
 E-mail: <a href= "mailto:celebrivignolesi@hotmail.com">celebrivignolesi@hotmail.com</a><br>
 Editor: Sara Scaglioni 
