--- a/Belloi1.html
+++ b/Belloi1.html
@@ -43,7 +43,7 @@ Il capolavoro librario di Belloi è il <i>De Vineolae moderniori statu chronica 
 	
 Vanno anche ricordate altre due sue opere, redatte nello stesso periodo e lasciate manoscritte: <i>De familiis nobilioribus Vineolae</i> e <i>Institutiones rite ac recte vivendi</i>.<br>  
 
-Rimasto vedovo nel 1710, Belloi vestì l’abito talare (anche il padre, perduta la moglie, si era fatto prete) e morì a Vignola il 27 luglio 1712. Fu sepolto nella chiesa dei Cappuccini esistente allora in paese; i suoi resti andarono poi dispersi (ciò accadde poco dopo il 1805, allorché la soppressione del convento impose il trasporto delle ossa dei defunti al nuovo cimitero e quelle del nostro personaggio non vennero ritrovate).<br>  
+Rimasto vedovo nel 1710, Belloi vestì l’abito talare (anche il padre, perduta la moglie, si era fatto prete) e spirò a Vignola il 27 luglio 1712. Fu sepolto nella chiesa dei Cappuccini esistente allora in paese; i suoi resti mortali andarono poi dispersi (ciò accadde poco dopo il 1805, allorché la soppressione del convento impose il trasporto delle ossa dei defunti al nuovo cimitero e quelle del nostro personaggio non vennero ritrovate).<br>  
 
 Vignola lo ricorda oggigiorno con una targa posta sulla facciata della casa natale (che si trova nell’antica Via Maggiore, dal 1882 Via Garibaldi) e con una strada a lui intitolata (accanto al Palazzo Contrari Boncompagni, detto più comunemente – ma in maniera impropria – Palazzo Barozzi).</big></p><br><br><br>
 <h5><big><big><big><big><strong><center>IMMAGINI</center></strong></big></big></big></big></big></h5><br><br>
