--- a/luglio.html
+++ b/luglio.html
@@ -76,6 +76,17 @@ Rimasto vedovo nel 1710, il nostro personaggio ottenne l’ordinazione sacerdota
 Nell’immagine qui sotto, frontespizio della prima edizione (postuma) dell’opera più importante e nota di Domenico Belloi, il <i>De Vineolae moderniori statu chronica enarratio</i> (iniziata nel 1704 e conclusa nel 1706).</big></p><br><br>
 <img src="img/celebri vignolesi/Belloi/Vineolae Chronica.jpg" width="400" height="650"><br><br><br>
 <p><strong><big><big><center>Vuoi saperne di più su Domenico Belloi?<br>Allora, visita il suo <a href="Belloi1.html">profilo personale</a> nella sezione <a href="Celebri Vignolesi.html">Celebri Vignolesi</a>!</big></big></center></strong><br><br><br></p>
+
+<p><big><strong>23 luglio 1828</strong>: nacque a Vignola <strong>GIOVANNI RODOLFI</strong>, sacerdote, bibliotecario, erudito e amministratore pubblico.<br><br> 
+
+Nel 1848 Giovanni Rodolfi diventò Cappuccino. Di notorie idee patriottiche, gli venne presto impedito di predicare. Nel 1866 egli si vide costretto a lasciare il suo Ordine per la chiusura delle Corporazioni religiose disposta dal Regno d’Italia; da allora, il nostro personaggio vestì sempre da prete. <br>
+A Vignola, dagli anni Sessanta, don Rodolfi svolse con zelo numerosi incarichi pubblici e non tardò a segnalarsi come una delle figure di maggior rilievo in seno alla comunità. Fra l’altro, egli fu: insegnante all’Istituto Ginnasio Comunale Libero; il primo vicedirettore (ma di fatto direttore) della Biblioteca Comunale; il principale organizzatore e il cronista delle manifestazioni che la comunità vignolese dedicò a Lodovico Antonio Muratori (1672-1750), in qualità di segretario del Comitato direttivo delle celebrazioni dell’anniversario bisecolare della sua nascita; il cofondatore e il primo direttore della Cassa di Risparmio; il primo segretario della Società di Storia Patria e d’Arti Belle; consigliere e assessore del Comune; il cassiere dell’Asilo Infantile; osservatore presso il Gabinetto Meteorologico.<br>
+Il nostro personaggio morì nel paese natale il 28 novembre 1896.<br><br>
+
+Nell’immagine sottostante, lapide che ricorda don Rodolfi e la sua attività a favore della Biblioteca Comunale (oggi, Municipio di Vignola, primo piano; un tempo, Biblioteca Comunale).</big></p><br>
+
+<img src="img/celebri vignolesi/Rodolfi Giovanni/lapide.jpg" width="400" height="700"><br><br><br>
+<p><strong><big><big><center>Vuoi saperne di più su Giovanni Rodolfi?<br>Allora, visita il suo <a href="Rodolfi.html">profilo personale</a> nella sezione <a href="Celebri Vignolesi.html">Celebri Vignolesi</a>!</big></big></center></strong><br><br><br></p>
 <p><big><strong><a href="Anniversari.html">Indice dei mesi</a></big></strong></center></p><br><br>
 </section>
 <footer><i class="far fa-copyright">&nbsp;</i> Copyright 2021, 2022, 2023 - CELEBRI VIGNOLESI<br>
