--- a/novembre.html
+++ b/novembre.html
@@ -33,7 +33,7 @@
 <p><big><strong>6 novembre 1859</strong>: <strong>GIUSEPPE GARIBALDI</strong> (1807-1882) giunse a Vignola per passare in rassegna il battaglione dei Bersaglieri accasermato parte nella rocca e parte nel Palazzo Contrari Boncompagni. Ne rimase ammirato.<br><br> 
 
 La presenza in paese di questo battaglione di Bersaglieri si doveva all’interessamento di <strong>Francesco Selmi</strong> (1817-1881), chimico, inventore, divulgatore culturale e scientifico, patriota, alto funzionario pubblico, biografo, narratore, studioso di Dante e dei primi secoli della lingua italiana, nonché profondo conoscitore tanto della storia del luogo natale quanto delle figure dei suoi figli più illustri; egli, all’epoca, abitava a Torino e – fra l’altro – conosceva di persona Garibaldi per averlo avuto nel dicembre 1854 come compagno di viaggio verso la Sardegna. Selmi, nell’estate 1859, aveva preso accordi con il podestà di Vignola, <strong>Luca Antonio Tosi</strong> (1811-1876) e con il governatore – poi, dittatore – delle Provincie Modenesi Luigi Carlo Farini (1812-1866), affinché nella cittadina trovasse sede uno dei Corpi dell’esercito che Manfredo Fanti (1806-1865) stava organizzando.<br><br> 
-Nell’immagine sottostante, il busto di Giuseppe Garibaldi a Vignola (nella strada del centro un tempo denominata Via Maggiore e dal 1882 poi intitolata all’Eroe dei Due Mondi). Quest’opera, dell’artista savignanese Giuseppe Graziosi (1879-1942), fu inaugurata con una solenne cerimonia il 10 settembre 1905. La scultura è collocata su una mensola davanti all’epigrafe marmorea affissa il 16 aprile 1882 sul medesimo palazzo, precedente omaggio della città a Garibaldi, per ricordarne la visita.</p><br><br>
+Nell’immagine sottostante, il busto di Giuseppe Garibaldi a Vignola (nella strada del centro un tempo denominata Via Maggiore e dal 1882 intitolata all’Eroe dei Due Mondi). Quest’opera, dell’artista savignanese Giuseppe Graziosi (1879-1942), fu inaugurata con una solenne cerimonia il 10 settembre 1905. La scultura è collocata su una mensola davanti all’epigrafe marmorea affissa il 16 aprile 1882 sul medesimo palazzo, precedente omaggio della città a Garibaldi, per ricordarne la visita.</p><br><br>
 <img src="img/FOTO VARIE/busto.jpg" width="650" height="600"><br><br><br><br>
 
 
@@ -70,7 +70,7 @@ Cantelli intrattenne buoni rapporti non solo con illustri letterati e scienziati
  
  <p><strong><a href="Anniversari.html">Indice dei mesi</a></big></strong></center></p><br><br>
  </section>
-<footer><i class="far fa-copyright">&nbsp;</i> Copyright 2021, 2022 - CELEBRI VIGNOLESI<br>
+<footer><i class="far fa-copyright">&nbsp;</i> Copyright 2021, 2022, 2023 - CELEBRI VIGNOLESI<br>
 <i class="fab fa-instagram"></i>&nbsp; <a href="https://www.instagram.com/celebri_vignolesi/?hl=it">celebri_vignolesi</a>&nbsp;&nbsp;&nbsp;<i class="fab fa-facebook"></i> &nbsp;<a href="https://www.facebook.com/Celebri-Vignolesi-103269268827528/?ref=page_internal">Celebri Vignolesi</a><br>
 E-mail: <a href= "mailto:celebrivignolesi@hotmail.com">celebrivignolesi@hotmail.com</a><br>
 Editor: Sara Scaglioni 
