--- a/luglio.html
+++ b/luglio.html
@@ -49,7 +49,7 @@ Nell’immagine sottostante, facciata del celebre Palazzo Farnese a Caprarola, g
 <img src="img/celebri vignolesi/Barozzi/facciata.jpg" width="850" height="550"><br><br><br>
 <p><strong><big><big><center>Vuoi saperne di più su Giacomo Barozzi?<br>Allora, visita il suo <a href="Barozzi.html">profilo personale</a> nella sezione <a href="Celebri Vignolesi.html">Celebri Vignolesi</a>!</big></big></center></strong></p><br><br><br>
 
-  <p><big><strong>8 luglio 1898</strong>: nacque a Spilamberto (MO), in località Confine, lo scultore <strong>IVO SOLI</strong>.<br><br>
+<p><big><strong>8 luglio 1898</strong>: nacque a Spilamberto (MO), in località Confine, lo scultore <strong>IVO SOLI</strong>.<br><br>
 Venuto alla luce da genitori di umili condizioni, Ivo Soli mostrò una precoce quanto impetuosa vocazione artistica. Dopo essere stato apprendista da un fabbro maniscalco di Vignola, paese dove si trasferì da bambino con i familiari e al quale rimase sempre legatissimo, un benefattore e il Comune di Vignola gli consentirono di frequentare, a Modena, il Regio Istituto di Belle Arti. Soli fu però costretto a interrompere gli studi nel 1917, quando venne chiamato alle armi, in zona di guerra, nel Terzo Reggimento Genio Telegrafico; l’anno successivo, lo scoppio di una mina gli procurò ferite alla testa.<br>
 Dopo la fine del Primo Conflitto Mondiale, il nostro personaggio riprese gli studi a Modena e, nel 1921, conseguì la licenza del corso speciale di Scultura. Lasciata la sua terra per Milano, egli cominciò ben presto a farsi conoscere in tutt’Italia come scultore valente e, poco più che trentenne, fu nominato professore di Plastica e Composizione alla Scuola Superiore degli Artefici presso l’Accademia di Belle Arti di Brera. Nello stesso momento, Soli diede avvio a una meno nota, ma di un certo rilievo qualitativo, carriera di pittore.<br>
 Durante la vita, il nostro personaggio partecipò a mostre e a esposizioni nazionali e internazionali d’arte. Sue opere sono presenti in diverse località italiane (compresa Vignola).<br>
@@ -64,6 +64,18 @@ Nell’immagine sottostante, <i>incipit</i> della dedicatoria in versi, dal tito
 <img src="img/celebri vignolesi/Plessi Giuseppe Antonio/incipit.jpg" width="430" height="600"><br><br><br>
 <p><strong><big><big><center>Vuoi saperne di più su Giuseppe Antonio Plessi?<br>Allora, visita il suo <a href="Plessi2.html">profilo personale</a> nella sezione <a href="Celebri Vignolesi.html">Celebri Vignolesi</a></big></big></center></strong></p><br><br><br>
 
+<p><big><strong>23 luglio 1828</strong>: nacque a Vignola <strong>GIOVANNI RODOLFI</strong>, sacerdote, bibliotecario, erudito e amministratore pubblico.<br><br> 
+
+Nel 1848 Giovanni Rodolfi diventò Cappuccino. Di notorie idee patriottiche, gli venne presto impedito di predicare. Nel 1866 egli si vide costretto a lasciare il suo Ordine per la chiusura delle Corporazioni religiose disposta dal Regno d’Italia; da allora, il nostro personaggio vestì sempre da prete. <br>
+A Vignola, dagli anni Sessanta, don Rodolfi svolse con zelo numerosi incarichi pubblici e non tardò a segnalarsi come una delle figure di maggior rilievo in seno alla comunità. Fra l’altro, egli fu: insegnante all’Istituto Ginnasio Comunale Libero; il primo vicedirettore (ma di fatto direttore) della Biblioteca Comunale; il principale organizzatore e il cronista delle manifestazioni che la comunità vignolese dedicò a <strong>Lodovico Antonio Muratori</strong> (1672-1750), in qualità di segretario del Comitato direttivo delle celebrazioni dell’anniversario bisecolare della sua nascita; il cofondatore e il primo direttore della Cassa di Risparmio; il primo segretario della Società di Storia Patria e d’Arti Belle; consigliere e assessore del Comune; il cassiere dell’Asilo Infantile; osservatore presso il Gabinetto Meteorologico.<br>
+Il nostro personaggio morì nel paese natale il 28 novembre 1896.<br><br>
+
+Nell’immagine sottostante, lapide che ricorda don Rodolfi e la sua attività a favore della Biblioteca Comunale (oggi, Municipio di Vignola, primo piano; un tempo, Biblioteca Comunale).</big></p><br>
+
+<img src="img/celebri vignolesi/Rodolfi Giovanni/lapide.jpg" width="400" height="700"><br><br><br>
+<p><strong><big><big><center>Vuoi saperne di più su Giovanni Rodolfi?<br>Allora, visita il suo <a href="Rodolfi.html">profilo personale</a> nella sezione <a href="Celebri Vignolesi.html">Celebri Vignolesi</a>!</big></big></center></strong><br><br><br></p>
+  
+ 
  <p><big><strong>27 luglio 1712</strong>: morì a Vignola <strong>DOMENICO BELLOI</strong> (o <strong>BELLOJ</strong>), notaio e storico.<br><br>  
 Domenico Belloi, figlio di <strong>Pietro Ercole</strong> (1643-1702), nacque a Vignola il 6 marzo 1660. Laureatosi <i>in utroque iure</i> presso l’Università di Bologna (1681), assunse la carica di protonotario apostolico a Roma (1683-1684), quindi venne nominato podestà di Monfestino e poi podestà di Corniglio (all’epoca, il primo borgo faceva parte del Marchesato di Vignola, mentre il secondo del Ducato di Parma). Tornato stabilmente nel luogo natale, vi intraprese l’attività di notaio e, nel 1689, sposò Anna Maria Vallicelli, avendone nove figli. A Vignola, da allora, la sua esistenza fu più volte tormentata da acuti dissapori e incomprensioni sorti in seno alla comunità cittadina.<br>  
 
@@ -77,16 +89,6 @@ Nell’immagine qui sotto, frontespizio della prima edizione (postuma) dell’op
 <img src="img/celebri vignolesi/Belloi/Vineolae Chronica.jpg" width="400" height="650"><br><br><br>
 <p><strong><big><big><center>Vuoi saperne di più su Domenico Belloi?<br>Allora, visita il suo <a href="Belloi1.html">profilo personale</a> nella sezione <a href="Celebri Vignolesi.html">Celebri Vignolesi</a>!</big></big></center></strong><br><br><br></p>
 
-<p><big><strong>23 luglio 1828</strong>: nacque a Vignola <strong>GIOVANNI RODOLFI</strong>, sacerdote, bibliotecario, erudito e amministratore pubblico.<br><br> 
-
-Nel 1848 Giovanni Rodolfi diventò Cappuccino. Di notorie idee patriottiche, gli venne presto impedito di predicare. Nel 1866 egli si vide costretto a lasciare il suo Ordine per la chiusura delle Corporazioni religiose disposta dal Regno d’Italia; da allora, il nostro personaggio vestì sempre da prete. <br>
-A Vignola, dagli anni Sessanta, don Rodolfi svolse con zelo numerosi incarichi pubblici e non tardò a segnalarsi come una delle figure di maggior rilievo in seno alla comunità. Fra l’altro, egli fu: insegnante all’Istituto Ginnasio Comunale Libero; il primo vicedirettore (ma di fatto direttore) della Biblioteca Comunale; il principale organizzatore e il cronista delle manifestazioni che la comunità vignolese dedicò a Lodovico Antonio Muratori (1672-1750), in qualità di segretario del Comitato direttivo delle celebrazioni dell’anniversario bisecolare della sua nascita; il cofondatore e il primo direttore della Cassa di Risparmio; il primo segretario della Società di Storia Patria e d’Arti Belle; consigliere e assessore del Comune; il cassiere dell’Asilo Infantile; osservatore presso il Gabinetto Meteorologico.<br>
-Il nostro personaggio morì nel paese natale il 28 novembre 1896.<br><br>
-
-Nell’immagine sottostante, lapide che ricorda don Rodolfi e la sua attività a favore della Biblioteca Comunale (oggi, Municipio di Vignola, primo piano; un tempo, Biblioteca Comunale).</big></p><br>
-
-<img src="img/celebri vignolesi/Rodolfi Giovanni/lapide.jpg" width="400" height="700"><br><br><br>
-<p><strong><big><big><center>Vuoi saperne di più su Giovanni Rodolfi?<br>Allora, visita il suo <a href="Rodolfi.html">profilo personale</a> nella sezione <a href="Celebri Vignolesi.html">Celebri Vignolesi</a>!</big></big></center></strong><br><br><br></p>
 <p><big><strong><a href="Anniversari.html">Indice dei mesi</a></big></strong></center></p><br><br>
 </section>
 <footer><i class="far fa-copyright">&nbsp;</i> Copyright 2021, 2022, 2023 - CELEBRI VIGNOLESI<br>
