--- a/Favoleggiatore.html
+++ b/Favoleggiatore.html
@@ -87,7 +87,7 @@
 <td><big><big><strong><a href="astronomo.html">26. L’astronomo ed il sole</a></strong></td></tr>
 
 <tr>
-<td><big><big><strong><a href="ovifuoco.html">27. I due ovi al fuoco</a></strong></td>
+<td><big><big><strong><a href="ovi.html">27. I due ovi al fuoco</a></strong></td>
 <td><big><big><strong><a href="cane.html">28. Il cane della vecchia dama</a></strong></td></tr>
 
 <tr>
