--- a/Pippo.html
+++ b/Pippo.html
@@ -73,7 +73,7 @@ Rientrato stabilmente in Italia, Simonini ha scelto di fissare la propria dimora
 <img src="img/celebri vignolesi/Pippo/pippogiovane.jpg" width="500" height="650"></p><br>
 <p><big><big><center>Il gruppo musicale <i>Azienda Tranviaria</i> in concerto (1974). Simonini è il batterista.  </center></big></big><br>
 <img src="img/celebri vignolesi/Pippo/band.jpg" width="850" height="600"></p><br>
-<p><big><big><center>Simonini, senza nome, incisione all’acquaforte, 1980. Questo esemplare è custodito a Bagnacavallo (RA),<br> Museo Civico delle Cappuccine, Gabinetto delle Stampe.</center></big></big><br>
+<p><big><big><center>Simonini, senza titolo, incisione all’acquaforte, 1980. Questo esemplare è custodito a Bagnacavallo (RA),<br> Museo Civico delle Cappuccine, Gabinetto delle Stampe.</center></big></big><br>
 <img src="img/celebri vignolesi/Pippo/bagnacavallo.jpg" width="460" height="600"></p><br>
 <p><big><big><center>Simonini all’<i>Expo</i> di Bari (1983). Di fianco a lui, il suo olio su tela <i>Carnevale</i>, da poco eseguito (oggi in collezione privata).</center></big></big><br>
 <img src="img/celebri vignolesi/Pippo/expo.jpg" width="860" height="580"></p><br>
