--- a/Bernardoni.html
+++ b/Bernardoni.html
@@ -83,6 +83,9 @@ L’incisione di Guzzi apre la dispensa su Bernardoni, il cui testo scritto è f
 <p><center><big><big>Frontespizio del secondo dei due volumi della raccolta <i>Poemi drammatici</i>:<br> <i>Poemi drammatici di Pietro Antonio Bernardoni Poeta Cesareo, Et Accademico Arcade, Gelato, Scomposto, Animoso, & Acceso.<br> Parte seconda consagrata All’Altezza Serenissima di Rinaldo I. d'Este Duca di Modona Reggio &c.</i>,<br> In Bologna, Per Costantino Pisarri, sotto le Scuole all’Insegna di S. Michele, 1707. Fonte: google.com</big></big></center></p>
 <img src="img/celebri vignolesi/Bernardoni/secondaparte.jpg" width="400" height="590"><br><br><br>
 
+<p><center><big><big><i>Incipit</i> di <i>L’Eraclio. Dramma per musica del Signor Pietro Bernardoni, Rappresentato in Roma l’Anno 1712</i>,<br> In Roma, Per Antonio de’ Rossi alla Chiavica del Bufalo, s.d. [1712?]. Fonte: google.com</big></big></center></p>
+<img src="img/celebri vignolesi/Bernardoni/eraclio.jpg" width="400" height="640"><br><br><br>
+
 <p><center><big><big>Casa natale di Bernardoni lungo la via che attualmente reca il suo nome.</big></center></p>
 <img src="img/celebri vignolesi/Bernardoni/casa.jpg" width="750" height="550"><br><br><br>
 <center><big>Lapide collocata sopra la porta di ingresso della casa natale di Bernardoni.<br> Il 1° luglio 1672, in realtà, è il giorno del battesimo di questo importante personaggio.</big></center><br>
