--- a/dicembre.html
+++ b/dicembre.html
@@ -62,7 +62,7 @@ Figlio di Angelo e Marianna Dallai, il nostro personaggio svolse il servizio mil
 
 Affetto da malaria, Degli Esposti morì a Vignola il 27 agosto 1923; fu sepolto nel camposanto cittadino. Due anni dopo, grazie a una raccolta di fondi alla quale partecipò anche il Comune di Vignola, venne inaugurato il suo monumento funebre, che è ancora possibile ammirare sul lato destro del viale d’ingresso di quel cimitero.<br>
 
-Il nostro personaggio e Caterina Pelosi (1896-1966), sposatisi nel 1916, ebbero il figlio Aristide (1920-1986), che godette di una certa fama nel campo dell’aviazione militare e civile. Questi, benché sia vissuto lontano da Vignola, decise di farsi inumare accanto al padre e alla madre.<br><br>
+Il nostro personaggio e Caterina Pelosi (1896-1966), sposatisi nel 1916, ebbero il figlio Aristide (1920-1986), che godette di una certa fama nel campo dell’aviazione militare e civile. Questi, benché sia vissuto quasi sempre lontano da Vignola, decise di farsi inumare accanto al padre e alla madre.<br><br>
 
 Nell’immagine, una fotografia che ritrae Amleto Degli Esposti in divisa da sottotenente degli Specialisti del Genio (1918). Fonte: Massimo Bazzani - Carlo Alberto Cavazzoni - Giampaolo Grandi - Gianluca Sandoni, <i>Amleto e Aristide Degli Esposti eroici aviatori, vignolesi</i>, Gruppo di Documentazione Vignolese “Mezaluna - Mario Menabue”, Savignano sul Panaro (MO), Tipolitografia F.G., 2010, p. 62.</big></p><br><br>
 <center><img src="img/celebri vignolesi/Degli Esposti Amleto/foto1.jpg" width="470" height="608"></center><br><br><br> 
@@ -78,7 +78,7 @@ Il nostro personaggio si spense nella città natale il 29 giugno 1964. Venne sep
 
 <p><big><strong><a href="Anniversari.html">Indice dei mesi</a></big></strong></center></p><br><br>
 </section>
-<footer><i class="far fa-copyright">&nbsp;</i> Copyright 2021, 2022 - CELEBRI VIGNOLESI<br>
+<footer><i class="far fa-copyright">&nbsp;</i> Copyright 2021, 2022, 2023 - CELEBRI VIGNOLESI<br>
 <i class="fab fa-instagram"></i>&nbsp; <a href="https://www.instagram.com/celebri_vignolesi/?hl=it">celebri_vignolesi</a>&nbsp;&nbsp;&nbsp;<i class="fab fa-facebook"></i> &nbsp;<a href="https://www.facebook.com/Celebri-Vignolesi-103269268827528/?ref=page_internal">Celebri Vignolesi</a><br>
 E-mail: <a href= "mailto:celebrivignolesi@hotmail.com">celebrivignolesi@hotmail.com</a><br>
 Editor: Sara Scaglioni 
