--- a/Paradisi.html
+++ b/Paradisi.html
@@ -120,7 +120,7 @@ Furono parecchi gli intellettuali italiani che della suddetta prolusione, accant
 
 
 <h4><big><big><big><big><strong><center>IMMAGINI</center></strong></big></big></big></big></h4><br><br>
-<p><big><big><center>Ritratto di Paradisi, dipinto a olio su tela; fu eseguito nel tardo Settecento ed è conservato nel<br> Palazzo (o Villa) Albergati a Zola Predosa. L’opera viene comunemente attribuita a Giuseppe Valiani<br> (o Valliani, o Vagliani), artista pistoiese i cui estremi cronologici sono il 1731 e il 1800;<br> se l’autore fosse davvero lui, è pensabile che questo ritratto risalga all’incirca al 1770-1780, lasso di tempo in cui<br> egli fu al lavoro presso Palazzo Albergati, dove realizzò alcuni affreschi (volte di camere, al terzo piano). Fonte: google.com</center></big></big></p>
+<p><big><big><center>Ritratto di Paradisi, dipinto a olio su tela; fu eseguito nel tardo Settecento ed è conservato nel<br> Palazzo (o Villa) Albergati a Zola Predosa. L’opera viene comunemente attribuita a Giuseppe Valiani<br> (o Valliani, o Vagliani), artista pistoiese i cui estremi cronologici sono il 1731 e il 1800;<br> se l’autore fosse davvero lui, è pensabile che questo ritratto risalga all’incirca al 1770-1780, decennio in cui<br> egli fu al lavoro presso Palazzo Albergati, dove realizzò alcuni affreschi (volte di camere, al terzo piano). Fonte: google.com</center></big></big></p>
 <center><img src="img/celebri vignolesi/Paradisi/ritratto.jpg" width="520" height="650"></center><br><br>
 <p><big><big><center>Busto di Paradisi (1780), attribuito allo scultore romano<br> Bartolomeo Cavaceppi (1716 ca. - 1799); collezione privata.<br>
 Fonte: google.com</center></big></big></p>
