--- a/Rodolfi.html
+++ b/Rodolfi.html
@@ -31,7 +31,7 @@
         <h3><center><big><big>GIOVANNI RODOLFI</big></big><br><br>
 	<big>(1828-1896)</big></center></h3><br><br><br>
 	<h4><big><big><big><big><strong><center>PROFILO BIOGRAFICO</center></strong></big></big></big></big></h4><br><br>
-	<p><big>Sacerdote, bibliotecario, erudito e amministratore pubblico, Giovanni Rodolfi nacque a Vignola il 23 luglio 1828 e morì ivi il 28 novembre 1896. Egli fu una delle figure pubbliche di maggior rilievo in seno alla comunità del suo paese natale durante l’intero XIX secolo; al di fuori delle aree modenese e bolognese, tuttavia, egli non ebbe molta notorietà né durante la vita né dopo.<br>  
+	<p><big>Sacerdote, bibliotecario, erudito e amministratore pubblico, <strong>GIOVANNI RODOLFI</strong> nacque a Vignola il 23 luglio 1828 e morì ivi il 28 novembre 1896. Egli fu una delle figure pubbliche di maggior rilievo in seno alla comunità del suo paese natale durante l’intero XIX secolo; al di fuori delle aree modenese e bolognese, tuttavia, egli non ebbe molta notorietà né durante la vita né dopo.<br>  
 
 Il padre del nostro personaggio era il vignolese Carlo Antonio (di solito, ricordato semplicemente come Carlo) Rodolfi, un pittore di non eccelso valore che con ogni probabilità, nel quarto decennio del XIX secolo, fu attivo a Vignola negli ambienti interni del Casino Bellucci (poi, Tosi Bellucci; dal 1916, Residenza Municipale) come autore di alcune parti delle decorazioni parietali a pennello. Della madre, di nome Margherita Vecchi, non si sa quasi nulla.<br>  
 
