--- a/Paradisi.html
+++ b/Paradisi.html
@@ -138,7 +138,7 @@ Fonte: google.com</center></big></big></p>
 <center><img src="img/celebri vignolesi/Paradisi/editio.jpg" width="450" height="600"></center><br><br>
 <p><big><big><center>Frontespizio della raccolta poetica <i>Versi sciolti</i>, In Bologna, A S. Tommaso D’Aquino, 1762. Fonte: google.com</center></big></big></p>
 <center><img src="img/celebri vignolesi/Paradisi/versi sciolti.jpg" width="450" height="640"></center><br><br>
-<p><big><big><center><i>Incipit</i> della seconda stesura, con diverse significative modifiche rispetto alla prima,<br> dell’ode che il poeta emiliano vergò in difesa di Alighieri<br> (<i>Al Sig. Canonico Gioseffo Ritorni. Sopra il Dante, in Versi sciolti del Signor Agostino Paradisi nobile reggiano</i>,<br> In Bologna, A S. Tommaso d’Aquino, 1762, pp. 31-37). Fonte: google.com</center></big></big></p>
+<p><big><big><center><i>Incipit</i> della seconda stesura, versione contenente significative modifiche rispetto alla prima,<br> dell’ode che il poeta emiliano vergò in difesa di Alighieri<br> (<i>Al Sig. Canonico Gioseffo Ritorni. Sopra il Dante, in Versi sciolti del Signor Agostino Paradisi nobile reggiano</i>,<br> In Bologna, A S. Tommaso d’Aquino, 1762, pp. 31-37). Fonte: google.com</center></big></big></p>
 <center><img src="img/celebri vignolesi/Paradisi/pag31.jpeg" width="450" height="600"></center><br><br>
 <p><big><big><center>Frontespizio di <i>Nel solenne aprimento della Università di Modena</i> [...], In Modena, Presso la Società Tipografica, 1772;<br> trattasi della versione a stampa del testo della prolusione all’anno accademico 1772/1773. Fonte: google.com</center></big></big></p>
 <center><img src="img/celebri vignolesi/Paradisi/prolusione.jpg" width="400" height="550"></center><br><br>
