--- a/Roli.html
+++ b/Roli.html
@@ -38,7 +38,7 @@ Nel 1916 Roli prese la laurea in Giurisprudenza presso l’Università di Modena
 
 Dopo la Vittoria, Roli rientrò nella sua terra d’origine ed esercitò brillantemente per molti anni la professione d’avvocato nel paese natale e a Modena.<br> 
 
-Nel 1919 il nostro personaggio figurò tra i fondatori e fu il primo presidente del “Circolo Amicizia” di Vignola, il quale ebbe sede per quasi cinque lustri all’interno di quello che all’epoca veniva denominato Palazzo Boncompagni (o – a essere più esatti – Palazzo Boncompagni Ludovisi, edificio oggigiorno noto – alternativamente – come Palazzo Contrari Boncompagni oppure come – con espressione impropria – Palazzo Barozzi), cessando poi l’attività fino al 1958 e risorgendo infine con lo stesso nome, ma in uno stabile di Via Paradisi.<br>
+Nel 1919 il nostro personaggio figurò tra i fondatori e fu il primo presidente del “Circolo Amicizia” di Vignola, un’aggregazione ricreativa che ebbe sede per quasi cinque lustri all’interno di quello che all’epoca veniva denominato Palazzo Boncompagni (o – a essere più esatti – Palazzo Boncompagni Ludovisi, edificio oggigiorno noto – alternativamente – come Palazzo Contrari Boncompagni oppure come – con espressione impropria – Palazzo Barozzi), cessando poi l’attività fino al 1958 e risorgendo infine con lo stesso nome, ma in uno stabile di Via Paradisi.<br>
 
 Nel 1920 Roli sposò Virginia (detta Gina) Bellei (1891-1980), dalla quale ebbe due figli, Antonio e Laura. L’anno successivo, dal 25 ottobre al 9 novembre, egli fu commissario prefettizio nel paese natale. Nel 1924 superò gli esami di idoneità al notariato.<br>  
 
@@ -48,7 +48,7 @@ Durante la vita, Roli, nella sua terra d’origine e anche al di fuori di essa, 
 
 Roli morì a Vignola il 25 giugno 1959 e venne inumato nel cimitero cittadino.<br>  
 
-Il Gruppo di Documentazione “Mezaluna - Mario Menabue” di Vignola e la famiglia del nostro personaggio, in collaborazione con la Fondazione di Vignola e il “Circolo Paradisi” (sorto nel 2006 dall’unione del già menzionato “Circolo Amicizia” con un altro ente sociale vignolese, il “Club Jacopo Barozzi”), hanno allestito una mostra monografica dal titolo <i>Ugo Roli da Vignola</i>, tenutasi nelle Sale della Meridiana della rocca cittadina dal 7 al 15 ottobre 2017.</big></p><br><br><br>
+Il Gruppo di Documentazione “Mezaluna - Mario Menabue” di Vignola e la famiglia del nostro personaggio, in collaborazione con la Fondazione di Vignola e il “Circolo Paradisi” (sorto nel 2006 dall’unione del già menzionato “Circolo Amicizia” con un altro ente sociale vignolese, il “Club Jacopo Barozzi”, istituito nel 1975 con scopi ricreativi e artistico-culturali), hanno allestito una mostra monografica dal titolo <i>Ugo Roli da Vignola</i>, tenutasi nelle Sale della Meridiana della rocca cittadina dal 7 al 15 ottobre 2017.</big></p><br><br><br>
 <h5><big><big><big><big><strong><center>IMMAGINI</center></strong></big></big></big></big></big></h5><br><br>
 
 <p><center><big><big>Fotografia che ritrae Roli nella prima maturità.</big></big></center><br>
