--- a/febbraio.html
+++ b/febbraio.html
@@ -77,7 +77,7 @@ Ugo Roli iniziò la sua carriera lavorativa come maestro elementare. In seguito,
 
 Roli partecipò alla Prima Guerra Mondiale in qualità di ufficiale di Stato Maggiore e fece numerose esperienze in prima linea. Nel corso del conflitto, vergò interessanti lettere (edite nel 1933) e venne decorato – fra l’altro – con la Medaglia d’Argento al Valor Militare.<br>  
 
-Nel 1919 questo personaggio fu uno dei fondatori del “Circolo Amicizia” di Vignola, sodalizio che trovò sede all’interno di quello che all’epoca veniva denominato Palazzo Boncompagni (o – a essere più esatti – Palazzo Boncompagni Ludovisi, edificio oggigiorno noto – alternativamente – come Palazzo Contrari Boncompagni oppure come – con espressione impropria – Palazzo Barozzi). Ne diventò il primo presidente.<br>
+Nel 1919 questo personaggio fu uno dei fondatori del “Circolo Amicizia” di Vignola, sodalizio ricreativo che trovò sede all’interno di quello che all’epoca veniva denominato Palazzo Boncompagni (o – a essere più esatti – Palazzo Boncompagni Ludovisi, edificio oggigiorno noto – alternativamente – come Palazzo Contrari Boncompagni oppure come – con espressione impropria – Palazzo Barozzi). Ne diventò il primo presidente.<br>
 
 In vita, non solo nel suo paese natale, Roli era apprezzato soprattutto come solerte cultore di memorie patrie, attento studioso di storia locale e provetto verseggiatore. La sua fama di valente e ingegnoso poeta in dialetto resiste ancora oggi.<br>  
 
