--- a/Cantelli.html
+++ b/Cantelli.html
@@ -50,6 +50,8 @@ Questo volume contiene i seguenti materiali scientifici: Franco Farinelli, <i>In
 
 <p><big><strong>FEDERZONI, Laura</strong>: <strong><i>Giacomo Cantelli: la formazione e l’attività di un cartografo del XVII secolo</i></strong>, «Bollettino della Società geografica italiana», vol. X (1993), fasc. 4, pp. 539-554.</big></p>
 
+<p><big><strong>Galli, Antonio</strong>: <strong>Storia Antica e Moderna di Vignola. Sino all’anno 1806</strong>, progetto editoriale del Gruppo di Documentazione Vignolese “Mezaluna - Mario Menabue”, a cura di Massimo Bazzani, Savignano s.P. (MO), Tipolitografia F.G., 2007, pp. 166-168 (si tratta di un volume che racchiude la I edizione di una cronaca manoscritta stesa in buona parte fra il 1800 e il 1809, con piccole integrazioni fatte negli anni successivi; essendo poco nota agli studiosi almeno fino a questa sua recente pubblicazione a stampa, tale fonte viene da noi segnalata nella presente Bibliografia, unica eccezione cronologica all’interno di una lista di contributi la cui stesura risale agli ultimi decenni [degli altri studi più datati recano traccia note e bibliografie contenuti negli studi compresi nel nostro elenco])</big></p>
+	
 <p><big><strong>PALAGIANO, Cosimo</strong>: <strong><i>Cantelli, Giacomo</i></strong>, in <i>Dizionario Biografico degli Italiani</i>, vol. XVIII, Roma, Istituto della Enciclopedia italiana, 1975, pp. 246-247.<br>
 Questa voce enciclopedica è disponibile anche nel sito web della <a href="https://www.treccani.it/enciclopedia/giacomo-cantelli_%28Dizionario-Biografico%29/">Treccani</a>, senza paginazione (ultimo accesso, 8 novembre 2022).</big></p>
 
@@ -74,7 +76,7 @@ Questa voce enciclopedica è disponibile anche nel sito web della <a href="https
 <center><img src="img/celebri vignolesi/Cantelli/Regni di Granada e d'Andalusia.jpg" width="850" height="650"></center><br><br>
 <p><big><strong><a href="Celebri Vignolesi.html">Indice dei nomi</a></big></strong></p><br>
 </section>
-<footer><i class="far fa-copyright">&nbsp;</i> Copyright 2021, 2022 - CELEBRI VIGNOLESI<br>
+<footer><i class="far fa-copyright">&nbsp;</i> Copyright 2021, 2022, 2023 - CELEBRI VIGNOLESI<br>
 <i class="fab fa-instagram"></i>&nbsp; <a href="https://www.instagram.com/celebri_vignolesi/?hl=it">celebri_vignolesi</a>&nbsp;&nbsp;&nbsp;<i class="fab fa-facebook"></i> &nbsp;<a href="https://www.facebook.com/Celebri-Vignolesi-103269268827528/?ref=page_internal">Celebri Vignolesi</a><br>
 E-mail: <a href= "mailto:celebrivignolesi@hotmail.com">celebrivignolesi@hotmail.com</a><br>
 Editor: Sara Scaglioni 
