--- a/Pellegrini.html
+++ b/Pellegrini.html
@@ -50,7 +50,7 @@ Vignola gli ha intitolato la strada lungo la quale era collocata la sua casa nat
 Il 5 novembre 2022, nella Sala Consiliare del Comune di Vignola, ha avuto luogo un evento pubblico in ricordo di quest’illustre concittadino. Nel corso di tale incontro, si è proceduto allo scoprimento di una targa in onore e alla memoria di Pellegrini, targa che nei giorni successivi è stata affissa nella via che porta il suo nome.<br><br><br><br>
 	
 		
-<h5><big><big><big><big><strong><center>BIBLIOGRAFIA E SITOGRAFIA MINIME DI RIFERIMENTO</center></strong></big></big></big></big></big></h5><br><br>
+<h5><big><big><big><big><strong><center>BIBLIOGRAFIA E SITOGRAFIA MINIME DI RIFERIMENTO,<br> E NOTIZIE SU COMUNICAZIONI ORALI VIGNOLESI</center></strong></big></big></big></big></big></h5><br><br>
 
 <p><big><strong>ANONIMO</strong>: <a href="http://www.marina.difesa.it/noi-siamo-la-marina/storia/la-nostra-storia/medaglie/Pagine/PellegriniMario.aspx"><strong><i>Mario Pellegrini. Capitano di corvetta. Medaglia d’oro al Valor Militare</i></strong></a>, s.d. [ma non prima del 2018], senza paginazione (ultimo accesso, 31 marzo 2023).</big></p>	
 
